--- a/src/includes/styles/index.css
+++ b/src/includes/styles/index.css
@@ -358,8 +358,13 @@ a:hover {
 
 .blog__blurb {
   display: grid;
-  grid-template-columns: 3fr 1fr 1fr;
   gap: 1em;
+}
+
+@media screen and (min-width: 768px) {
+  .blog__blurb { 
+    grid-template-columns: 3fr 1fr 1fr;
+  }
 }
 
 .blog__blurb-title {
