--- a/src/layouts/home.njk
+++ b/src/layouts/home.njk
@@ -27,7 +27,7 @@
   </div>
 
   <div class="latest-posts | container">
-    <div class="latest-posts__header | flow">
+    <div class="latest-posts__header">
       <h2 class="latest-posts__title">Nieuwste blogberichten</h2>
       <a class="latest-posts__see-all | inline-block" href="/blog">Zie alle blogberichten</a>
     </div>
